--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@ html[data-theme="dark"] {
     <button class="explain-btn" onclick="loadExample('robot')">🤖 Robotics Command</button>
     <button class="explain-btn" onclick="loadExample('ai')">🧠 AI System Log</button>
     <button class="explain-btn" onclick="loadExample('legal')">⚖️ Legal Filing</button>
-    <button class="explain-btn" onclick="openVinModal()">🚗 2022 Corvette VIN</button>
+    <button class="explain-btn" onclick="openVinModal()">🚗 VIN</button>
   </div>
 </div>
 
@@ -478,7 +478,7 @@ html[data-theme="dark"] {
   <div style="background:var(--card); padding:26px; border-radius:10px; width:440px;
               border:1px solid var(--border); box-shadow:0 4px 18px rgba(0,0,0,.35);">
 
-    <h3 class="section-title" style="font-size:20px;">2022 Corvette VIN Decoder</h3>
+    <h3 class="section-title" style="font-size:20px;">VIN Decoder</h3>
 
     <input id="vinInput"
            placeholder="Enter VIN (e.g., 1G1YB3D46N5123456)"
