--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
       rel="stylesheet" />
 
 <style>
+
+/* Prevent content from hiding under sticky header */
+.card, #explainerOutput {
+  scroll-margin-top: 110px;
+}
+
+  
 /* ============================================================================ */
 /* ✅ GLOBAL RESET + TYPOGRAPHY */
 /* ============================================================================ */
