--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@ html[data-theme="dark"] {
 /* ============================================================================ */
 #mainHeader {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;     /* ✅ center everything */
   align-items: center;
+  gap: 26px;                    /* ✅ comfortable spacing */
   padding: 18px 32px;
   background: var(--bg);
   border-bottom: 1px solid var(--border);
@@ -100,6 +101,7 @@ html[data-theme="dark"] {
   top: 0;
   z-index: 9999;
 }
+
 
 #novakBrand {
   font-size: 28px;
