--- a/index.html
+++ b/index.html
@@ -323,6 +323,11 @@ html[data-theme="dark"] .card {
 <!-- ✅ PART 2 — Audience Selector + Dynamic Messaging + Why NOVAK -->
 
 <!-- ✅ AUDIENCE SELECTOR -->
+
+<h3 style="margin-top:32px; font-size:18px; font-weight:600;">
+  Choose Your Role or Interest:
+</h3>
+  
 <div id="audienceNav" style="display:flex; gap:10px; margin-top:32px; flex-wrap:wrap;">
   <button id="btn-public" class="aud-btn" onclick="setAudience('public')">🌍 Public</button>
   <button id="btn-government" class="aud-btn" onclick="setAudience('government')">🏛 Government</button>
