--- a/index.html
+++ b/index.html
@@ -17,6 +17,32 @@
 
 <style>
 
+/* Audience selector buttons */
+.aud-btn {
+  border: 2px solid var(--border);
+  background: var(--card);
+  padding: 8px 16px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 15px;
+  transition: 0.25s;
+}
+
+/* Hover feedback */
+.aud-btn:hover {
+  border-color: var(--blue);
+  background: rgba(26, 79, 179, 0.08);
+}
+
+/* ✅ ACTIVE SELECTION — clearly highlighted */
+.aud-btn.active {
+  border-color: var(--blue);
+  background: var(--blue);
+  color: #ffffff !important;
+  font-weight: 600;
+}
+
+  
 /* Prevent analogies from sliding under header */
 #explainerOutput,
 #hashOutputList,
