--- a/index.html
+++ b/index.html
@@ -389,6 +389,15 @@ html[data-theme="dark"] .card {
 <div id="whyNovakCard" class="card" style="margin-top:28px; position:relative;">
   <h2 class="section-title">Why NOVAK — Why Now?</h2>
 
+  <p style="margin-top:10px; font-weight:600;">
+  NOVAK = <strong>Nondestructive Objective Verification of Authenticated Knowledge</strong>
+</p>
+
+<p style="margin-top:6px; font-style:italic; opacity:0.85;">
+  Not blockchain. Not Bitcoin. Not SSL/TLS. Not logging. Not “trust me” systems —
+  NOVAK proves correctness mathematically <strong>before</strong> action occurs.
+</p>
+  
   <p>
     Automation now approves mortgages, denies veterans’ benefits, sets insurance rates, steers vehicles,
     recommends surgeries, and moves trillions of dollars — often without proof of correctness, legality, or integrity.
