--- a/index.html
+++ b/index.html
@@ -967,6 +967,14 @@ function setAudience(a) {
   setAudience("public");
 });
 
+  /* Highlight active audience selection */
+.aud-btn.active {
+  border-color: var(--blue);
+  background: var(--blue);
+  color: #ffffff !important;
+  font-weight: 600;
+}
+
   
 </script>
 
