--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ html[data-theme="dark"] .theme-toggle:hover {
   <h2 class="section-title">What is NOVAK?</h2>
 
   <p style="font-size:17px; margin-bottom:12px;">
-    <strong>NOVAK = Non-Optional Verification And Knowledge</strong> —
+    <strong>NOVAK = NOVAK Verification And Knowledge</strong> —
     meaning no automated decision may execute unless its data, rules,
     timing, and output are mathematically proven correct first.
   </p>
