--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
   <div class="header-center">
     <div id="novakBrand">NOVAK Protocol</div>
     <div id="novakTagline">
-      <strong>NOVAK</strong> = <em>Novak Object Verifiable Audit Kernel</em>
+      <strong>NOVAK</strong> = <em>NOVAK OBJECTIVE VERIFICATION of AUTONONMOUS KNOWLEDGE</em>
     </div>
     <a id="novakSiteLink"
        href="https://www.novakprotocol.com"
