--- a/index.html
+++ b/index.html
@@ -16,6 +16,31 @@
         rel="stylesheet" />
 
   <style>
+
+/* ✅ Prevent content from sliding under sticky header */
+html {
+  scroll-padding-top: 110px; /* matches header height */
+}
+
+/* ✅ When JS scrolls-to content, ensure visibility */
+.card,
+#audienceContent,
+#explainerOutput,
+#whatChangesCard,
+#whyNovakCard,
+#hashOutputList,
+#rgac,
+#gameBox,
+#transparencyView,
+#storyPanel {
+  scroll-margin-top: 120px;
+}
+
+    body {
+  padding-top: 110px;
+}
+
+    
     /* ====================================================================== */
     /* ✅ GLOBAL RESET + TYPOGRAPHY                                           */
     /* ====================================================================== */
