--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@ html {
 
   <!-- EXPLAINER BUTTONS -->
   <div style="margin-top:26px;" class="pill-row">
-    <button class="pill-btn explain-btn" onclick="showExplain('simple')">🤯 I don't get it</button>
+    <button class="pill-btn explain-btn" onclick="showExplain('simple', this)">🤯 I don't get it</button>
     <button class="pill-btn explain-btn" onclick="showExplain('milkshake')">🥤 Milkshake Analogy</button>
     <button class="pill-btn explain-btn" onclick="showExplain('pencil')">🖍️ Colored Pencil Analogy</button>
     <button class="pill-btn explain-btn" onclick="showExplain('key')">🔑 Key Analogy</button>
